fix for angular editor menu icons not showing correctly

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,4 +4,7 @@
 
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+// body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+::ng-deep angular-editor-toolbar button i {
+    font-family: FontAwesome !important; 
+    } 
